Logic for kickstart seems to work however need to figure out where vmlinuz and initrd.img comes from when virt-install runs

--- a/config/vm.ini
+++ b/config/vm.ini
@@ -4,4 +4,5 @@ description = Just a VM for Testing
 memory = 4096
 vcpus = 4
 path = /var/lib/libvirt/images/centos8
-iso = /var/lib/libvirt/images/CentOS-Stream-9-latest-x86_64-dvd1.iso
+iso = /var/lib/libvirt/images/CentOS-Stream-8-x86_64-20230119-boot.iso
+kickstart = /root/anaconda-ks.cfg
