Kickstart files are retrieved correctly, just seem to get kickstart file errors now, but that's probably user error.

--- a/config/vm.ini
+++ b/config/vm.ini
@@ -3,6 +3,6 @@ name = Test
 description = Just a VM for Testing
 memory = 4096
 vcpus = 4
-path = /var/lib/libvirt/images/centos8
-iso = /var/lib/libvirt/images/CentOS-Stream-8-x86_64-20230119-boot.iso
-kickstart = /root/anaconda-ks.cfg
+path = /var/lib/libvirt/images/centos8    # qcow/raw image for the VM data 
+iso = /var/lib/libvirt/images/boot.iso    # Linux boot iso
+kickstart = http://                       # Add IP then path of anaconda file in the directory python runs in
