Changed the logic since using the libvirtd python module is limited in terms of injecting kickstarts

--- a/config/vm.ini
+++ b/config/vm.ini
@@ -1,8 +1,11 @@
 [DEFAULT]
 name = Test
-description = Just a VM for Testing
-memory = 4096
+description = "Just a VM for Testing"
+ram = 4096
 vcpus = 4
-path = /var/lib/libvirt/images/centos8    # qcow/raw image for the VM data 
-iso = /var/lib/libvirt/images/boot.iso    # Linux boot iso
-kickstart = http://                       # Add IP then path of anaconda file in the directory python runs in
+location = "https://mirror.stream.centos.org/9-stream/BaseOS/x86_64/os/"
+ks_path = config/ks.cfg
+os_variant = centos-stream9
+disk_path = "../vm.img"
+disk_size = 20
+network_bridge = "virbr0"
