Cleaned up the code and have it working with alma9.1

--- a/config/ks.cfg
+++ b/config/ks.cfg
@@ -1,45 +1,63 @@
-#version=RHEL7
+#version=ALMALINUX-9.1
 # System authorization information
 auth --enableshadow --passalgo=sha512
 
-# Use network installation
-url --url="http://mirror.centos.org/centos/7/os/x86_64/"
+# Use text mode install
+text
 
 # Run the Setup Agent on first boot
 firstboot --enable
 
-# Keyboard layouts
+# System keyboard
 keyboard --vckeymap=us --xlayouts='us'
 
 # System language
 lang en_US.UTF-8
 
-# Network information
-network  --bootproto=dhcp --device=eth0 --ipv6=auto --activate
-network  --hostname=localhost.localdomain
-
-# Root password
-rootpw --iscrypted $1$./U0feaxO$RUnpYjJt7yE9XyCGt7Q/
-
-# System timezone
+# TimeZone
 timezone America/New_York --isUtc
 
+# Network settings
+network --bootproto=dhcp --device=link --activate --onboot=on
+
+# Root password
+rootpw --plaintext ""
+
+# Firewall configuration
+firewall --enabled --service=ssh
+
+# SELinux configuration
+selinux --enforcing
+
+# Services to enable
+services --enabled="chronyd"
+
 # System bootloader configuration
-bootloader --location=mbr
+bootloader --append=" crashkernel=auto" --location=mbr --boot-drive=sda
 
-# Clear the Master Boot Record
-zerombr
-
-# Partition clearing information
-clearpart --all --initlabel
-
-# Disk partitioning information
+# Partitioning
 autopart --type=lvm
 
 # Reboot after installation
 reboot
 
-# Packages installation
+# Use the AlmaLinux 9.1 repositories
+url --url=https://repo.almalinux.org/almalinux/9.1/BaseOS/x86_64/kickstart/
+
+# Additional repositories
+repo --name="AppStream" --baseurl=https://repo.almalinux.org/almalinux/9.1/AppStream/x86_64/kickstart/
+
 %packages
+@^minimal-environment
 @core
+kexec-tools
+%end
+
+%addon com_redhat_kdump --enable --reserve-mb='auto'
+%end
+
+%anaconda
+pwpolicy root --minlen=6 --minquality=1 --notstrict --nochanges --notempty
+pwpolicy user --minlen=6 --minquality=1 --notstrict --nochanges --emptyok
+pwpolicy luks --minlen=6 --minquality=1 --notstrict --nochanges --notempty
 %end
