--- a/config/vm.ini
+++ b/config/vm.ini
@@ -3,9 +3,10 @@ name = Test
 description = "Just a VM for Testing"
 ram = 4096
 vcpus = 4
-location = "https://mirror.stream.centos.org/9-stream/BaseOS/x86_64/os/"
+location = https://repo.almalinux.org/almalinux/9.1/BaseOS/x86_64/kickstart/
 ks_path = config/ks.cfg
-os_variant = centos-stream9
-disk_path = "../vm.img"
+os_variant = almalinux9
+disk_path = "vm.img"
 disk_size = 20
 network_bridge = "virbr0"
+graphics = none
