Updated kickstart and config file

--- a/config/ks.cfg
+++ b/config/ks.cfg
@@ -15,13 +15,13 @@ keyboard --vckeymap=us --xlayouts='us'
 lang en_US.UTF-8
 
 # TimeZone
-timezone America/New_York --isUtc
+timezone America/New_York --utc
 
 # Network settings
 network --bootproto=dhcp --device=link --activate --onboot=on
 
 # Root password
-rootpw --plaintext ""
+rootpw --plaintext "changeme"
 
 # Firewall configuration
 firewall --enabled --service=ssh
@@ -33,7 +33,7 @@ selinux --enforcing
 services --enabled="chronyd"
 
 # System bootloader configuration
-bootloader --append=" crashkernel=auto" --location=mbr --boot-drive=sda
+bootloader --append=" crashkernel=auto" --location=mbr --boot-drive=vda
 
 # Partitioning
 autopart --type=lvm
@@ -56,8 +56,7 @@ kexec-tools
 %addon com_redhat_kdump --enable --reserve-mb='auto'
 %end
 
-%anaconda
-pwpolicy root --minlen=6 --minquality=1 --notstrict --nochanges --notempty
-pwpolicy user --minlen=6 --minquality=1 --notstrict --nochanges --emptyok
-pwpolicy luks --minlen=6 --minquality=1 --notstrict --nochanges --notempty
-%end
+
+# pwpolicy root --minlen=6 --minquality=1 --notstrict --nochanges --notempty
+# pwpolicy user --minlen=6 --minquality=1 --notstrict --nochanges --emptyok
+# pwpolicy luks --minlen=6 --minquality=1 --notstrict --nochanges --notempty
